<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/header_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/ais" />

    <ImageView
        android:id="@+id/main_image_view"
        android:layout_width="wrap_content"
        android:layout_height="234dp"
        android:layout_below="@id/header_image_view"
        android:src="@drawable/aaais" />

    <TextView
        android:id="@+id/description1_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_image_view"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:paddingTop="7dp"
        android:text="@string/school_description"
        android:textColor="#4689C8"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:layout_below="@id/description1_text_view">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_information"
            android:textAllCaps="true"
            android:paddingTop="15dp"
            android:paddingBottom="7dp"
            android:textSize="20sp"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp">
            <ImageView
                android:id="@+id/address_image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/address" />

            <TextView
                android:id="@+id/address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:text="@string/address"
                android:autoLink="none"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#4689C8"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp">
            <ImageView
                android:id="@+id/timing_image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/timing" />

            <TextView
                android:id="@+id/timing_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:text="@string/timings"
                android:autoLink="none"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#4689C8"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp">
            <ImageView
                android:id="@+id/website_image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/website" />

            <TextView
                android:id="@+id/website_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:text="@string/website"
                android:autoLink="web"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#4689C8"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp">
           <ImageView
                android:id="@+id/phone_image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/phone" />

           <TextView
                android:id="@+id/phone_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:text="@string/phone_number"
                android:autoLink="phone"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#4689C8"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>